--- a/其它範例/node-express-會員管理crud/package.json
+++ b/其它範例/node-express-會員管理crud/package.json
@@ -6,16 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "eslint-config-prettier": "^6.11.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mysql2": "^2.0.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
+    "mysql2": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
